--- a/about.html
+++ b/about.html
@@ -133,13 +133,13 @@
 
                 /* 2. Massive Neon Glow (Pure Outer Shadow) */
                 /* We use 4 layers to make it look thick like your screenshot */
-                box-shadow:
+                /* box-shadow:
                     0 0 10px #ff0000,
                     0 0 15px #ff0000,
                     0 0 25px rgba(255, 0, 0, 0.7),
                     0 0 40px rgba(255, 0, 0, 0.4) !important;
 
-                border-color: #ff0000 !important;
+                border-color: #ff0000 !important; */
                 z-index: 20 !important;
             }
         }
