--- a/index.html
+++ b/index.html
@@ -134,12 +134,12 @@
 
                 /* 2. Massive Neon Glow (Pure Outer Shadow) */
                 /* We use 4 layers to make it look thick like your screenshot */
-                box-shadow:
+                /* box-shadow:
                     0 0 10px #ff0000,
                     0 0 25px rgba(255, 0, 0, 0.7),
                     0 0 40px rgba(255, 0, 0, 0.5) !important;
 
-                border-color: #ff0000 !important;
+                border-color: #ff0000 !important; */
                 z-index: 20 !important;
             }
         }
